<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ProfileMovieFragment">


    <ImageView
        android:id="@+id/photo_profile"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:src="@drawable/ic_play_circle_outline_24"
        app:layout_constraintBottom_toTopOf="@+id/divider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_name_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="20dp"
        android:layout_marginLeft="10dp"
        android:text="Dago Peralta"
        app:layout_constraintBottom_toBottomOf="@+id/photo_profile"
        app:layout_constraintStart_toEndOf="@+id/photo_profile"
        app:layout_constraintTop_toTopOf="@id/photo_profile" />

    <ImageView
        android:id="@+id/ivConfig"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginRight="20dp"
        android:src="@drawable/ic_settings_24"
        app:layout_constraintBottom_toBottomOf="@+id/photo_profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/photo_profile" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/photo_profile" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rc_profile_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="5dp"
        android:layout_marginLeft="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider" />

    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:layout_marginVertical="10dp"
        android:layout_marginLeft="10dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toTopOf="@id/txt_follow_list"
        app:layout_constraintTop_toBottomOf="@+id/rc_profile_list" />

    <TextView
        android:id="@+id/txt_follow_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:text="@string/list_follow"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider2" />

    <TextView
        android:id="@+id/txt_follow_list_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="10dp"
        android:text="@string/list_follow_description"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_follow_list" />

    <Button
        android:id="@+id/bt_start_follow"
        android:layout_width="match_parent"
        android:layout_height="48sp"
        android:layout_marginHorizontal="20dp"
        android:text="@string/bt_start_follow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_follow_list_description" />

    <View
        android:id="@+id/divider3"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:layout_marginVertical="10dp"
        android:layout_marginLeft="10dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toTopOf="@id/txt_recent_show"
        app:layout_constraintTop_toBottomOf="@+id/bt_start_follow" />

    <TextView
        android:id="@+id/txt_recent_show"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:text="@string/recent_show"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider3" />

    <TextView
        android:id="@+id/txt_recent_show_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="10dp"
        android:text="@string/recent_show_description"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_recent_show" />

    <View
        android:id="@+id/divider4"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:layout_marginVertical="10dp"
        android:layout_marginLeft="10dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toTopOf="@id/txt_favorite_person"
        app:layout_constraintTop_toBottomOf="@+id/txt_recent_show_description" />

    <TextView
        android:id="@+id/txt_favorite_person"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:text="@string/favorite_person"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider4" />

    <TextView
        android:id="@+id/txt_favorite_person_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="10dp"
        android:text="@string/favorite_person_des"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_favorite_person" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/botton_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/orange_imdb"
        app:itemIconTint="@drawable/selector"
        app:itemTextColor="@drawable/selector"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/menu">

    </com.google.android.material.bottomnavigation.BottomNavigationView>

</androidx.constraintlayout.widget.ConstraintLayout>